<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingTop="18dp"
    android:paddingRight="18dp">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swhAA"
        android:text="@string/swhAAStr"
        android:textColor="@color/colorText"
        android:background="@color/colorButton"
        android:layout_gravity="center_horizontal"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swhLighting"
        android:text="@string/swhLightingStr"
        android:textColor="@color/colorText"
        android:background="@color/colorButton"
        android:layout_gravity="center_horizontal"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swhAlphaBlending"
        android:text="@string/swhABStr"
        android:textColor="@color/colorText"
        android:background="@color/colorButton"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/lblBrightness"
        android:textColor="@color/colorText"
        android:text="@string/lblBrightnessStr" />

    <SeekBar
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:max="100"
        android:id="@+id/skbBrightness"
        />



</LinearLayout>