<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background="@drawable/back_image">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlay"
        android:onClick="onClickPlay"
        android:text="@string/btnPlayStr"
        android:textColor="@color/colorText"
        android:background="@color/colorButton"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnOptions"
        android:onClick="onClickOptions"
        android:text="@string/btnOptionsStr"
        android:textColor="@color/colorText"
        android:background="@color/colorButton"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnControls"
        android:onClick="onClickControls"
        android:text="@string/btnControlsStr"
        android:textColor="@color/colorText"
        android:background="@color/colorButton"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnInfo"
        android:onClick="onClickInfo"
        android:text="@string/btnInfoStr"
        android:textColor="@color/colorText"
        android:background="@color/colorButton"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>