<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="18dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:buttonBarStyle">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGraphics"
            android:text="@string/btnGraphicsStr"
            android:textColor="@color/colorText"
            android:background="@color/colorButton"
            android:onClick="onClickGraphics"
            style="?android:buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSound"
            android:text="@string/btnSoundStr"
            android:textColor="@color/colorText"
            android:background="@color/colorButton"
            android:onClick="onClickSound"
            style="?android:buttonBarButtonStyle"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnInput"
            android:text="@string/btnControlsStr"
            android:textColor="@color/colorText"
            android:background="@color/colorButton"
            android:onClick="onClickInput"
            style="?android:buttonBarButtonStyle"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnData"
            android:text="@string/btnDataStr"
            android:textColor="@color/colorText"
            android:background="@color/colorButton"
            android:onClick="onClickData"
            style="?android:buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:text="@string/btnSaveStr"
            android:textColor="@color/colorText"
            android:background="@color/colorButton"
            android:onClick="onClickSave"
            style="?android:buttonBarButtonStyle"/>

    </LinearLayout>

    <FrameLayout
        android:id ="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:background="@color/colorButton"/>
</LinearLayout>